--- a/applications.properties
+++ b/applications.properties
@@ -1,1 +1,2 @@
-paginationsort.findall.url = http://localhost:9090/all
+paginationsort.findall.url = http://localhost:9090
+paginationsort.findall.uri = /all
