--- a/application.properties
+++ b/application.properties
@@ -1,1 +1,1 @@
-paginationsort.findall.url = http://localhost:9090/all
+insurance.provider.findall.url = http://localhost:8080/insurance-service/getUpdatePlans
