--- a/application.properties
+++ b/application.properties
@@ -1,1 +1,1 @@
-insurance.provider.findall.url = http://localhost:8080/insurance-service/getUpdatePlans
+insurance.provider.findall.url = http://localhost:8080/getUpdatePlans
